--- a/Lab4/Lab_4.ipynb
+++ b/Lab4/Lab_4.ipynb
@@ -16,7 +16,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -74,7 +74,7 @@
         "id": "MbKR2WLI-agj",
         "outputId": "4626b33f-0c95-42eb-f5db-02482005b004"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -110,7 +110,7 @@
         "id": "alxsZlx__TDM",
         "outputId": "17b4fc08-5faf-4e58-8f22-d3d8226233d8"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -147,7 +147,7 @@
         "id": "CgLZ0d_hAvPt",
         "outputId": "251aac6d-d481-45f9-91b6-fcd5b46a67db"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -879,7 +879,7 @@
         "id": "PfpSfCQWBiPu",
         "outputId": "b5c87493-de38-4dc7-f85b-6d9c1cfbeac1"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -908,7 +908,7 @@
         "id": "RcjNc-KJDYlq",
         "outputId": "52d87bc7-a28d-4b03-e229-534b5da9e677"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -957,7 +957,7 @@
         "id": "sU55PRtrE2XK",
         "outputId": "a2f4d209-e3c8-4875-beee-437c4cfa807b"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1145,13 +1145,115 @@
         "id": "p3Mg5f6sGIFc",
         "outputId": "250a3e66-a959-4391-e2bd-8f0797fc03c6"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Количество строк: 592\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import requests\n",
+        "import random\n",
+        "from bs4 import BeautifulSoup\n",
+        "import string\n",
+        "\n",
+        "url=\"https://www.imdb.com/chart/top\"\n",
+        "\n",
+        "def getMovies(url):\n",
+        "  headers = {'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/5.140.86.25 '}\n",
+        "  html=requests.get(url,headers=headers)\n",
+        "  soup=BeautifulSoup(html.text,\"html.parser\")\n",
+        "  movies=soup.find_all(\"a\",class_=\"ipc-title-link-wrapper\")\n",
+        "  random.shuffle(movies)\n",
+        "  return movies\n",
+        "\n",
+        "def getSummary(url):\n",
+        "  headers = {'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/5.140.86.25 '}\n",
+        "  movie_sumary=requests.get(url,headers=headers)\n",
+        "  s=BeautifulSoup(movie_sumary.text,\"html.parser\")\n",
+        "  summary=s.find_all(\"span\",class_=\"sc-466bb6c-0 kJJttH\")\n",
+        "  for x in summary:\n",
+        "        return x.contents[0]\n",
+        "\n",
+        "def getMovieInfo(movie):\n",
+        "  headers = {'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/5.140.86.25 '}\n",
+        "  movie_title=movie.contents[0]\n",
+        "  movie_url=\"https://www.imdb.com\"+str(movie.attrs['href'])\n",
+        "  resp=requests.get(movie_url,headers=headers)\n",
+        "  s=BeautifulSoup(resp.text,\"html.parser\")\n",
+        "  movie_year=s.find_all(\"a\",class_=\"ipc-link ipc-link--baseAlt ipc-link--inherit-color\")\n",
+        "  spisok=[]\n",
+        "  for year in movie_year:\n",
+        "    spisok.append(year.contents[0].text)\n",
+        "  year=spisok[len(spisok)-2]\n",
+        "  return movie_title.text, movie_url ,year\n",
+        "\n",
+        "def MoviePicker():\n",
+        " c=0\n",
+        " print(\"--------------------------------------------\")\n",
+        " for movie in getMovies(\"https://www.imdb.com/chart/top\"):\n",
+        "  movie_title, movie_url, movie_year=getMovieInfo(movie)\n",
+        "  print(movie_title, \"(\",movie_year,\")\")\n",
+        "  print(getSummary(movie_url))\n",
+        "  print(\"--------------------------------------------\")\n",
+        "  c=c+1\n",
+        "  if (c==10):\n",
+        "          break\n",
+        "\n",
+        "if __name__=='__main__':\n",
+        "  MoviePicker()\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EnxVTvVABnfJ",
+        "outputId": "c73796e4-8ea8-4b31-8bb1-6a92b4a92a74"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--------------------------------------------\n",
+            "63. Avengers: Infinity War ( 2018 )\n",
+            "The Avengers and their allies must be willing to sacrifice all in an attempt to defeat the powerful Thanos before his blitz of devastation and ruin puts an end to the universe.\n",
+            "--------------------------------------------\n",
+            "112. Hamilton ( 2020 )\n",
+            "The real life of one of America's foremost founding fathers and first Secretary of the Treasury, Alexander Hamilton. Captured live on Broadway from the Richard Rodgers Theater with the origi...\n",
+            "--------------------------------------------\n",
+            "54. City Lights ( 1931 )\n",
+            "With the aid of a wealthy erratic tippler, a dewy-eyed tramp who has fallen in love with a sightless flower girl accumulates money to be able to help her medically.\n",
+            "--------------------------------------------\n",
+            "164. Lock, Stock and Two Smoking Barrels ( 1998 )\n",
+            "Eddy persuades his three pals to pool money for a vital poker game against a powerful local mobster, Hatchet Harry. Eddy loses, after which Harry gives him a week to pay back 500,000 pounds.\n",
+            "--------------------------------------------\n",
+            "22. Interstellar ( 2014 )\n",
+            "When Earth becomes uninhabitable in the future, a farmer and ex-NASA pilot, Joseph Cooper, is tasked to pilot a spacecraft, along with a team of researchers, to find a new planet for humans.\n",
+            "--------------------------------------------\n",
+            "110. Heat ( 1995 )\n",
+            "A group of high-end professional thieves start to feel the heat from the LAPD when they unknowingly leave a clue at their latest heist.\n",
+            "--------------------------------------------\n",
+            "169. The Bridge on the River Kwai ( 1957 )\n",
+            "British POWs are forced to build a railway bridge across the river Kwai for their Japanese captors in occupied Burma, not knowing that the allied forces are planning a daring commando raid t...\n",
+            "--------------------------------------------\n",
+            "189. On the Waterfront ( 1954 )\n",
+            "An ex-prize fighter turned New Jersey longshoreman struggles to stand up to his corrupt union bosses, including his older brother, as he starts to connect with the grieving sister of one of ...\n",
+            "--------------------------------------------\n",
+            "92. Star Wars: Episode VI - Return of the Jedi ( 1983 )\n",
+            "After rescuing Han Solo from Jabba the Hutt, the Rebels attempt to destroy the second Death Star, while Luke struggles to help Darth Vader back from the dark side.\n",
+            "--------------------------------------------\n",
+            "137. The Truman Show ( 1998 )\n",
+            "An insurance salesman discovers his whole life is actually a reality TV show.\n",
+            "--------------------------------------------\n"
           ]
         }
       ]
